# exam2_full_eval

./: README.md
TestA/src/read_only/: d_node.h
TestA/test/: q1_test.cpp  q2_1_test.cpp  q2_2_test.cpp
TestB/src/read_only/: card.h  node.h
TestB/test/: CMakeLists.txt  q1_test.cpp  q2_1_test.cpp  q2_2_test.cpp
TestC/: CMakeLists.txt
TestC/src/read_only/: CMakeLists.txt  q1_objects.h  singly_linked_list.cpp  singly_linked_list.h
TestC/test/: CMakeLists.txt  q1_test.cpp  q2_1_test.cpp  q2_2_test.cpp
